--- a/app/src/main/res/layout/covid_layout.xml
+++ b/app/src/main/res/layout/covid_layout.xml
@@ -5,14 +5,49 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_marginHorizontal="14dp"
         android:background="@drawable/covid_shape">
 
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/pieChart"
+            android:layout_width="170dp"
+            android:layout_height="170dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp" />
+
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:id="@+id/view_stay_at_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginRight="30dp"
+            android:text="@string/stay_home"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:gravity="start"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/view_stay_at_home"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginRight="30dp"
+            android:text="Вот Статистика по стране:"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:gravity="start" />
+    </RelativeLayout>
 </layout>
