--- a/app/src/main/res/layout/covid_layout.xml
+++ b/app/src/main/res/layout/covid_layout.xml
@@ -1,53 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="180dp"
+    android:background="@drawable/covid_shape"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.HomeFragment"
+    android:clickable="true"
+    android:focusable="true">
 
-    <data>
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/pieChart"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp" />
 
-    </data>
+    <TextView
+        android:id="@+id/view_stay_at_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="28dp"
+        android:layout_toEndOf="@+id/pieChart"
+        android:layout_toRightOf="@+id/pieChart"
+        android:gravity="start"
+        android:text="@string/stay_home"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_marginHorizontal="14dp"
-        android:background="@drawable/covid_shape">
+    <TextView
+        android:id="@+id/stats_for_country"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/view_stay_at_home"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="4dp"
+        android:layout_toEndOf="@+id/pieChart"
+        android:layout_toRightOf="@+id/pieChart"
+        android:gravity="start"
+        android:text="Вот Статистика по стране:"
+        android:textColor="@color/white"
+        android:textSize="14sp" />
 
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/pieChart"
-            android:layout_width="170dp"
-            android:layout_height="170dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp" />
+    <TextView
+        android:id="@+id/country_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/stats_for_country"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="2dp"
+        android:layout_toEndOf="@+id/pieChart"
+        android:layout_toRightOf="@+id/pieChart"
+        android:gravity="start"
+        android:text="Россия"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"/>
 
-        <TextView
-            android:id="@+id/view_stay_at_home"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginRight="30dp"
-            android:text="@string/stay_home"
-            android:textSize="20sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:gravity="start"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/view_stay_at_home"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginRight="30dp"
-            android:text="Вот Статистика по стране:"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:gravity="start" />
-    </RelativeLayout>
-</layout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="10dp"
+        android:layout_toEndOf="@+id/pieChart"
+        android:layout_toRightOf="@+id/pieChart"
+        android:gravity="start"
+        android:text="@string/click_to_next"
+        android:textColor="@color/white"
+        android:textSize="12sp" />
+</RelativeLayout>
