--- a/app/src/main/res/layout/covid_card.xml
+++ b/app/src/main/res/layout/covid_card.xml
@@ -4,8 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
-    app:cardCornerRadius="20dp">
-
+    app:cardCornerRadius="20dp"
+    android:layout_margin="8dp"
+    android:id="@+id/covid_card">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
